# media-finder

./: .gitignore  Cargo.toml  Procfile  README.md  package.json
client/: index.html  package-lock.json  package.json
client/src/: App.tsx  backdropContext.tsx  index.tsx  theme.ts  themeHelpers.ts
client/src/components/: ApplicationContainer.tsx  ArrowIcon.tsx  ErrorBoundary.tsx  Footer.tsx  GlobalStyle.tsx  Header.tsx  Home.tsx  Logo.tsx  MainContent.tsx  PreviewTrack.tsx  TMDBLogo.tsx  Thumbnail.tsx  TitleSingle.tsx
client/src/components/TitleSingle/: Cast.tsx  CastMember.tsx  Crew.tsx  CrewContainer.tsx  CrewMember.tsx  CrewMemberContainer.tsx  TitleSingle.tsx  index.tsx  useCreditsResource.tsx  useMediaTitleResource.tsx
client/src/utils/: createResource.tsx  getData.tsx
src/: controllers.rs  main.rs  models.rs  routes.rs
