[package]
name = "media-find"
version = "0.1.0"
authors = ["Kevin Hallett <kevinmhallett@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.reqwest]
version = "0.10.0-alpha.2"
features = ["blocking"]

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "serve"]